--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img id="header-img" src="img/logo.png" alt="Magic fest logo">
             <nav id="nav-bar">
                 <ul>
-                    <li><a href="#" class="nav-link">About</a></li>
+                    <li><a href="#about" class="nav-link">About</a></li>
                     <li><a href="#features" class="nav-link">Features</a></li>
                     <li><a href="#" class="nav-link">Pricing</a></li>
                 </ul>
